--- a/screen/로그인.html
+++ b/screen/로그인.html
@@ -27,12 +27,12 @@
     -webkit-box-shadow: 27px 43px 43px -26px rgba(89,89,89,0.39);
     -moz-box-shadow: 27px 43px 43px -26px rgba(89,89,89,0.39);
     box-shadow: 27px 43px 43px -26px rgba(89,89,89,0.39);
-}/*
-.shadow-light{
+}
+/* .shadow-light{
     -webkit-box-shadow: 45px 45px 104px -33px rgba(38,38,38,0.92);
     -moz-box-shadow: 45px 45px 104px -33px rgba(38,38,38,0.92);
     box-shadow: 45px 45px 104px -33px rgba(38,38,38,0.92);
-}*/
+} */
 .login-form-container{
  
     background:#f5f5f5 ;
